Fix issues with endpoints